# cantors-paradise

./: .gitignore  LICENSE  PROJECT_CANTOR_SEED.md  README.md  pyproject.toml
cantor/: __init__.py  cli.py
cantor/acquire/: archive_org.py  arxiv.py  base.py  jamesrmeyer.py  mactutors.py  tracker.py
cantor/annotate/: __init__.py  schema.py  tagger.py
cantor/db/: catalog.py  schema.py  seed_data.py
cantor/eval/: __init__.py  evaluate.py  validation.py
cantor/finetune/: __init__.py  config.py  train.py
cantor/process/: __init__.py  extract.py  language.py  segment.py
cantor/training/: __init__.py  formatter.py  negative.py  sampler.py  synthetic.py
