[project]
name = "cantors-paradise"
version = "0.1.0"
description = "Training data pipeline for fine-tuning a language model that thinks like Georg Cantor (1845-1918)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
keywords = ["cantor", "set-theory", "fine-tuning", "lora", "training-data", "nlp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.1",
    "PyMuPDF>=1.24",
    "rich>=13.7",
    "click>=8.1",
    "langdetect>=1.0.9",
    "tqdm>=4.66",
]

[project.optional-dependencies]
train = [
    "datasets>=2.19",
    "transformers>=4.44",
    "peft>=0.12",
    "bitsandbytes>=0.43",
    "accelerate>=0.33",
    "torch>=2.3",
    "wandb>=0.17",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[project.scripts]
cantor = "cantor.cli:cli"

[project.urls]
Repository = "https://github.com/bshepp/cantors-paradise"

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.setuptools.packages.find]
where = ["."]
include = ["cantor*"]
